# mpflash

./: .all-contributorsrc  .env  .gitignore  README.md  justfile  mpflash.code-workspace  pyproject.toml  rebase_log.md  tests.md
.github/: codecov.yml  copilot-instructions.md  dependabot.yml
.github/workflows/: copilot-setup-steps.yml  pytest_mpflash.yml  release.yml
docs/: api-reference.md  architecture.md  contributing.md  custom_firmware_prd.md  developer.md  index.md  logger_fixes.md  mpflash_api_example.ipynb  mpremoteboard_api.md  startup_speed.md  stm32_udev_rules.md  troubleshooting.md
examples/: worklist_api_improvements.py
firmware/: mpflash.db
mpflash/: __init__.py  add_firmware.py  ask_input.py  basicgit.py  build.py  cli_add.py  cli_download.py  cli_flash.py  cli_group.py  cli_list.py  cli_main.py  cli_plugins.py  cli_pyocd.py  common.py  config.py  connected.py  download.py  downloaded.py  list.py  logger.py  versions.py
mpflash/bootloader/: activate.py  base.py  detect.py  manual.py  micropython.py  registry.py  touch1200.py
mpflash/custom/: __init__.py  add.py  copy.py  naming.py
mpflash/db/: __init__.py  boards.py  boards_version.txt  core.py  create.py  downloads.py  gather_boards.py  load.py  loader.py  meta.py  models.py  tools.py  update.py
mpflash/download/: __init__.py  from_web.py  fwinfo.py  jid.py  jit.py
mpflash/flash/: __init__.py  base.py  context.py  debug_probe.py  esp.py  psoc6.py  pyocd_core.py  pyocd_flash.py  pyocd_probe.py  registry.py  services.py  stm32.py  stm32_dfu.py  worklist.py
mpflash/mpboard_id/: __init__.py  add_boards.py  alternate.py  board.py  board_id.py  board_info.json  known.py  resolve.py  store.py
mpflash/mpremoteboard/: __init__.py  mpy_fw_info.py  runner.py
mpflash/udev_rules/: 49-vtlinkii.rules  50-cmsis-dap.rules  50-picoprobe.rules  65-mpflash-stm32-dfu.rules
reporting/: MicroPython_boards.ipynb  build_reporting_db.py  micropython_boards_reporting.sqlite3
scripts/: Qry_board_id_to_versions.sqlite3-query  Untitled-1.ipynb  Untitled-1.sqlite3-query  Untitled-2.sqlite3-query  Untitled-3.sqlite3-query  Untitled-4.sqlite3-query  Untitled-6.sqlite3-query  Untitled-7.sqlite3-query  Untitled-8.sqlite3-query  board_id.ipynb  join_boards-downloads.sqlite3-query  mpr_command.ipynb  publish.py  update_deps.py
tests/: basicgit_test.py  conftest.py  test_JIDpy.py  test_ask_input.py  test_basicgit.py  test_build.py  test_cli_main.py  test_config.py  test_connected.py  test_db_downloads_unit.py  test_download.py  test_downloaded.py  test_downloaded_sort.py  test_filtered_comports.py  test_gather_boards_additional.py  test_list.py  test_logger_fix.py  test_mp_board_filter.py  test_mpf_api.py  test_version_preservation_fix.py  test_versions.py
tests/basicgit/: test_basicgit.py
tests/bootloader/: test_bootloader_detect.py  test_bootloader_registry.py  test_detect.py  test_manual.py  test_micropython.py
tests/cli/: test_cli_download.py  test_cli_flash.py  test_cli_list.py  (+3 more)
(+71 files in other folders)
